# hyperliquid-matching-engine

./: .gitignore  CMakeLists.txt  README.md  latency_results.csv
benchmarks/: bench_engine.cpp
frontend/: package-lock.json  package.json  server.js  tailwind.config.js
frontend/public/: data.json
frontend/src/: App.jsx  index.css
include/hyperliquid/: binary_protocol.h  command.h  cpu_affinity.h  event.h  feed_handler.h  flat_map.h  json_serializer.h  latency_tracker.h  matching_engine.h  mempool.h  network_feed_handler.h  order.h  order_book.h  price_level.h  price_levels_array.h  price_levels_avl.h  publisher.h  spsc_queue.h  timestamp.h  types.h  websocket_server.h
src/: feed_handler.cpp  main.cpp  matching_engine.cpp  metrics.cpp  order_book.cpp  publisher.cpp
tests/: test_advanced_orders.cpp  test_determinism.cpp  test_matching.cpp  test_mempool.cpp  test_order_book.cpp  test_price_levels.cpp  test_spsc_queue.cpp
tools/: cli_live.cpp  cli_viz.cpp  data_generator.cpp  demo.cpp  engine_bridge.cpp  log_converter.cpp
